--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
     "redux": "^5.0.1"
   },
   "scripts": {
-    "clean": "rimraf dist .turbo coverage stroybook-static",
+    "clean": "rimraf dist .turbo coverage storybook-static",
     "build": "pnpm run clean && tsc --build",
     "dev": "tsc --watch",
     "test": "jest"
